# moon-python-monorepo-docker-issues

./: .gitignore  .prototools  Dockerfile.cli  Dockerfile.cli-dep  Dockerfile.cli-dep.dockerignore  Dockerfile.cli.dockerignore  README.md  moon.yml
.moon/: toolchains.yml  workspace.yml
interpolate-cli/: README.md  moon.yml  pyproject.toml
interpolate-cli-dep/: README.md  moon.yml  pyproject.toml
interpolate-cli-dep/src/interpolate_cli_dep/: __init__.py
interpolate-cli-dep/tests/: test_cli_dep.py
interpolate-cli/src/interpolate_cli/: __init__.py
interpolate-cli/tests/interpolate_cli/: test_cli.py
interpolate-lib/: README.md  moon.yml  pyproject.toml
interpolate-lib/src/interpolate_lib/: __init__.py
interpolate-lib/tests/: test_linear_interpolate.py
