[project]
name = "interpolate-lib"
version = "0.1.0"
description = "A Python library for interpolation utilities."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
]

[dependency-groups]
dev = ["pytest>=8.0,<9"]

[tool.uv]
# use the python binary provided by proto
python-preference = "only-system"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
